# eyerest

./: .travis.yml  CMakeLists.txt  README.md  eyerest-dbus.xml  eyerest.conf
cli/: CMakeLists.txt  eyerest-cli.c
daemon/: CMakeLists.txt  config.c  config.h  dbus.c  dbus.h  main.c  notify.c  notify.h  org.zlbruce.eyerest.service.in  state.c  state.h  timer.c  xevent.c  xfullscreen.c  xfullscreen.h  xlock.c
emodule/: CMakeLists.txt
emodule/data/: CMakeLists.txt  e-module-eyerest.edc  eyerest.edc  module.desktop
emodule/src/: CMakeLists.txt  dbus_eyerest.c  dbus_eyerest.h  e_mod_main.c  e_mod_main.h
gnome-shell-extension-eyerest/eyerest@zlbruce.org/: dbus.js  extension.js  metadata.json  prefs.js  stylesheet.css  util.js
gnome-shell-extension-eyerest/eyerest@zlbruce.org/locale/zh_CN/LC_MESSAGES/: gnome-shell-extensions-eyerest.mo  gnome-shell-extensions-eyerest.po
gnome-shell-extension-eyerest/eyerest@zlbruce.org/schemas/: gschemas.compiled  org.gnome.shell.extensions.eyerest.gschema.xml
plasma/: CMakeLists.txt  Messages.sh  eyerest-config.ui  plasma-applet-eyerest.desktop  plasma-eyerest.cpp  plasma-eyerest.h  plasma_applet_eyerest_zh_CN.po
src/: CMakeLists.txt  config.c  config.h  eye_log.c  eye_log.h  list.h  main.c  state.c  state.h  timer.c  timer.h  xevent.c  xevent.h  xlock.c  xlock.h
systray/: CMakeLists.txt  tray.c
